--- a/index.html
+++ b/index.html
@@ -702,6 +702,11 @@ SOFTWARE.
             <details style="font-size: 75%;">
                 <summary id="updates" style="font-size: 140%;">Updates</summary>
 
+                <p aria-label="Symbol for the extra category. It is an orange cross with 4 dots close to each angle of the cross. The symbol and the dots have a darker orange shadow and a orange creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/extra.svg" width="40vw">
+                </p>
+                <p id="post55" style="margin: 0px">26-08-2025 - Huge thanks to @guadalindie for the incredible event! It was an amazing experience and I met a lot of cool people ^^ (A bit late but didn't want to come back from the hiatus without mentioning anything :P)</p>
+
                 <p aria-label="Symbol for the update category. It is a green triangle with a dot in the middle. The symbol and the dot have a darker green shadow and a green creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/update.svg" width="40vw">
                 </p>
