Post 57 - Streams! & Twitch added on socials

--- a/index.html
+++ b/index.html
@@ -702,6 +702,11 @@ SOFTWARE.
             <details style="font-size: 75%;">
                 <summary id="updates" style="font-size: 140%;">Updates</summary>
 
+                <p aria-label="Symbol for the release category. It is a red rhombus with a dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/release.svg" width="40vw">
+                </p>
+                <p id="post57" style="margin: 0px">04-09-2025 - From now on I will be streaming while I work on my projects!</p>
+
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/preview.svg" width="40vw">
                 </p>
@@ -1110,6 +1115,12 @@ SOFTWARE.
                             <img alt="Reddit icon in black (clear mode) that redirects to Abendiix's profile."
                             src="assets/img/icons/reddit.svg" style="margin: 5px; width: 35px" id="reddit" class="changeableColor"></a>
                         <!--reddit-->
+
+                        <!--twitch-->
+                        <a aria-label="Link to Abendiix's Twitch." href="https://www.twitch.tv/abendiix" target="_blank" id="twitchlink">
+                            <img alt="Twitch icon in black (clear mode) that redirects to Abendiix's profile."
+                            src="assets/img/icons/twitch.svg" style="margin: 5px; width: 35px" id="twitch" class="changeableColor"></a>
+                        <!--twitch-->
 
                     </div>
                     <!--Socials' section-->
