BOTO LABO added

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ SOFTWARE.
                         </div>
                     </div>
                 </div>
-                <!--Trom box-->
+                <!--BOTO LABO box-->
 
                 <!--Trom box-->
                 <div class="projectBox" id="trom" style="padding: 25px;">
