--- a/index.html
+++ b/index.html
@@ -744,6 +744,41 @@ SOFTWARE.
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/preview.svg" width="40vw">
                 </p>
+                <p id="post65" style="margin: 0px">21-10-25 - Check out Boto’s new movement animation from their design update!</p>
+
+                <p aria-label="Symbol for the extra category. It is an orange cross with 4 dots close to each angle of the cross. The symbol and the dots have a darker orange shadow and a orange creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/extra.svg" width="40vw">
+                </p>
+                <p id="post64" style="margin: 0px">18-10-25 - Last week BOTO LABO was at BCN GameFest 2025 and it was amazing!! Thanks to everyone that came to the booth to play the game or have a chat! It was a pleasure to meet such incredible and friendly people 🌱❤️</p>
+
+                <p aria-label="Symbol for the extra category. It is an orange cross with 4 dots close to each angle of the cross. The symbol and the dots have a darker orange shadow and a orange creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/extra.svg" width="40vw">
+                </p>
+                <p id="post63" style="margin: 0px">09-10-25 - Just one day left for BCN GameFest 2025!! Remember that BOTO LABO will be at EXH 104, just to the right when entering the event!</p>
+
+                <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/preview.svg" width="40vw">
+                </p>
+                <p id="post62" style="margin: 0px">08-10-25 - Who doesn't love some stickers? Come by our booth at BCN GameFest 2025 to get some from BOTO LABO! Wait... what's that on the middle of the stickers?</p>
+
+                <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/preview.svg" width="40vw">
+                </p>
+                <p id="post61" style="margin: 0px">07-10-25 - BOTO LABO will have new and improved levels to try out at BCN GameFest 2025! Visit our booth and try to beat them all! 🤖🌱</p>
+
+                <p aria-label="Symbol for the extra category. It is an orange cross with 4 dots close to each angle of the cross. The symbol and the dots have a darker orange shadow and a orange creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/extra.svg" width="40vw">
+                </p>
+                <p id="post60" style="margin: 0px">03-10-25 - BOTO LABO will be at BCN GameFest 2025 next weekend (10-12th) at La Farga! See you there! 👀</p>
+
+                <p aria-label="Symbol for the update category. It is a green triangle with a dot in the middle. The symbol and the dot have a darker green shadow and a green creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/update.svg" width="40vw">
+                </p>
+                <p id="post59" style="margin: 0px">BOTO LABO’s website and mine have been updated with information about BOTO LABO and its presskit!</p>
+
+                <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/preview.svg" width="40vw">
+                </p>
                 <p id="post58" style="margin: 0px">10-09-2025 - It's been some time since Boto's last appearance! Take a look at their new idle animation that will improve their movement across the levels!</p>
 
                 <p aria-label="Symbol for the release category. It is a red rhombus with a dot in the middle. The symbol and the dot have a darker red shadow and a red creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
