--- a/index.html
+++ b/index.html
@@ -744,6 +744,16 @@ SOFTWARE.
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
                     <img src="assets/img/icons/preview.svg" width="40vw">
                 </p>
+                <p id="post77" style="margin: 0px">18-12-25 - Check out a snippet from BOTO LABO's background music!</p>
+
+                <p aria-label="Symbol for the update category. It is a green triangle with a dot in the middle. The symbol and the dot have a darker green shadow and a green creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/update.svg" width="40vw">
+                </p>
+                <p id="post76" style="margin: 0px">16-12-25 - BOTO LABO’s first trailer is out now! Also, BOTO LABO’s Steam page has been updated!</p>
+
+                <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
+                    <img src="assets/img/icons/preview.svg" width="40vw">
+                </p>
                 <p id="post75" style="margin: 0px">11-12-25 - Walls can also be found connected by corners!</p>
 
                 <p aria-label="Symbol for the preview category. It is a blue circle with a dot in the middle. The symbol and the dot have a darker blue shadow and a blue creamy white outline." role="heading" style="margin-top: 20px; margin-bottom: 5px">
